5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1637_2446.log
== TEST (2019-04-09 11:33:04) 
-- CODE:
a = int(input("digite a senha:")

x = a // 100000
y = a // 10000%10
z = a // 1000%10
i = a // 100%10
j = a // 10 % 10
k = a % 10

print(a)
print(x,y,z,i,j,k)
-- ERROR:
File "XXXX", line 3
    x = a // 100000
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:33:25) 
-- CODE:
a = int(input("digite a senha:"))

x = a // 100000
y = a // 10000%10
z = a // 1000%10
i = a // 100%10
j = a // 10 % 10
k = a % 10

print(a)
print(x,y,z,i,j,k)
-- OUTPUT:
87612
0 8 7 6 1 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:35:12) 
-- CODE:
a = int(input("digite a senha:"))

x = a // 100000
y = a // 10000%10
z = a // 1000%10
i = a // 100%10
j = a // 10 % 10
k = a % 10

s = x + z + j
ss = y + i + k

if (s%ss==0)
	print("acesso liberado")
else:
	print("senha invalida")
-- ERROR:
File "XXXX", line 13
    if (s%ss==0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:35:20) 
-- CODE:
a = int(input("digite a senha:"))

x = a // 100000
y = a // 10000%10
z = a // 1000%10
i = a // 100%10
j = a // 10 % 10
k = a % 10

s = x + z + j
ss = y + i + k

if (s%ss==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:35:38) 
-- CODE:
a = int(input("digite a senha:"))

x = a // 100000
y = a // 10000%10
z = a // 1000%10
i = a // 100%10
j = a // 10 % 10
k = a % 10

s = x + z + j
ss = y + i + k

if (s%ss==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:36:49) 
-- CODE:
a = int(input("digite a senha:"))

x = a // 100000
y = a // 10000%10
z = a // 1000%10
i = a // 100%10
j = a // 10 % 10
k = a % 10

s = x + z + j
ss = y + i + k

print(x,y,z,i,j,k)
-- OUTPUT:
0 8 7 6 1 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:39:54) 
-- CODE:
a = int(input("digite a senha:"))

x = a // 100000
y = a // 10000%10
z = a // 1000%10
i = a // 100%10
j = a // 10 % 10
k = a % 10

s = x + z + j
ss = y + i + k

if(ss%s==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:40:09) 
-- CODE:
a = int(input("digite a senha:"))

x = a // 100000
y = a // 10000%10
z = a // 1000%10
i = a // 100%10
j = a // 10 % 10
k = a % 10

s = x + z + j
ss = y + i + k

if(ss%s==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 12:40:25) 
-- CODE:
a = int(input("digite a senha:"))

x = a // 100000
y = a // 10000%10
z = a // 1000%10
i = a // 100%10
j = a // 10 % 10
k = a % 10

s = x + z + j
ss = y + i + k

if(ss%s==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.136136
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:40:45) 
-- CODE:
a = int(input("digite a senha:"))

x = a // 100000
y = a // 10000%10
z = a // 1000%10
i = a // 100%10
j = a // 10 % 10
k = a % 10

s = x + z + j
ss = y + i + k

if(ss%s==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.213188
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
